--- a/index.html
+++ b/index.html
@@ -190,6 +190,58 @@ section {
 .project:hover {
     transform: translateY(-10px);
 }
+
+        @media (min-width: 768px) {
+    .container {
+        padding: 0px 50px;
+        max-width: 1200px;
+        margin: 0 auto;
+    }
+}
+
+/* Estilos para tablets */
+@media (max-width: 768px) {
+    ul {
+        flex-direction: column;
+    }
+
+    header img {
+        width: 120px;
+        height: 125px;
+    }
+
+    h1 {
+        font-size: 2rem;
+    }
+
+    .container {
+        padding: 0px 20px;
+    }
+}
+
+/* Estilos para celulares */
+@media (max-width: 480px) {
+    ul {
+        flex-direction: column;
+    }
+
+    header img {
+        width: 100px;
+        height: 105px;
+    }
+
+    h1 {
+        font-size: 1.5rem;
+    }
+
+    .container {
+        padding: 0px 10px;
+    }
+
+    input {
+        width: 100%;
+    }
+}
     </style>
     <div class="container"> 
         <nav>
