--- a/works.html
+++ b/works.html
@@ -4,74 +4,71 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-</head>
-<body>
     <style type="text/css">
         body {
-    color: white;
-    background-color: rgb(39, 35, 35);
-    font-family: Arial;
+            color: white;
+            background-color: rgb(39, 35, 35);
+            font-family: Arial;
+            background-image: url('https://i.pinimg.com/736x/d9/28/9c/d9289c1a0efd9eda58197f41b49699d7.jpg');
+            background-size: cover;
+            background-repeat: no-repeat;
+            background-position: center;
+        }
 
-    
-  background-image: url('https://i.pinimg.com/736x/d9/28/9c/d9289c1a0efd9eda58197f41b49699d7.jpg'); /* Substitua pelo caminho da sua imagem */
-  background-size: cover; /* Ajusta a imagem para cobrir todo o fundo */
-  background-repeat: no-repeat; /* Evita que a imagem se repita */
-  background-position: center; /* Centraliza a imagem no fundo */
-}
+        h1, h2 {
+            font-family: Helvetica;
+            font-size: 21px;
+            color: rgb(201, 168, 168);
+            margin: 20px 50px;
+            padding: 20px;
+            background-color: #1f1f1f;
+            border-radius: 10px;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+        }
 
-h1 {
-    font-family: Helvetica;
-    padding: 136px 30px;
-    font-size: 21px;
-    color:rgb(201, 168, 168);
-    margin-left: 50px;
-    padding: 20px;
-    margin: 20px 0;
-    background-color: #1f1f1f;
-    border-radius: 10px;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
-    margin-top: 66px;
-}
+        .imagem-posicionada {
+            width: 22%;
+            height: auto;
+            margin: 66px auto;
+            display: block;
+            border: 8px solid rgb(115, 115, 156);
+        }
 
-h2 {
-    font-family: Helvetica;
-    padding: 136px 30px;
-        padding: 20px;
-    margin: 20px 0;
-    background-color: #1f1f1f;
-    border-radius: 10px;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
-    font-size: 21px;
-    color:rgb(201, 168, 168);
-    margin-left: 50px;
-    margin-top: 66px;
-}
+        @media (max-width: 768px) {
+            h1, h2 {
+                font-size: 18px;
+                margin: 20px 30px;
+                padding: 15px;
+            }
 
-.imagem-posicionada {
-    position: absolute;
-    top: 56px;
-    left: 692px;
-    width: 22%;
-    height: auto;
-    margin-left: 166px;
-    margin-top: 66px;
+            .imagem-posicionada {
+                width: 50%;
+                margin: 30px auto;
+            }
+        }
 
-    border: 8px solid rgb(115, 115, 156);
-}
+        @media (max-width: 480px) {
+            h1, h2 {
+                font-size: 16px;
+                margin: 10px 20px;
+                padding: 10px;
+            }
 
-
-</style>
-<div>
-    <h1>PROJETOS</h1>
-    <h2>OUTROS TRABALHOS</h2>
-    <header>
-        <div class="center"></div>
-        <img src="./img/columbina2.jpeg" alt="Descrição da Imagem" class="imagem-posicionada">
-    </header>
-</div>
-
-</header>
-
-</header>
+            .imagem-posicionada {
+                width: 80%;
+                margin: 20px auto;
+            }
+        }
+    </style>
+</head>
+<body>
+    <div>
+        <h1>PROJETOS</h1>
+        <h2>OUTROS TRABALHOS</h2>
+        <header>
+            <div class="center"></div>
+            <img src="./img/columbina2.jpeg" alt="Descrição da Imagem" class="imagem-posicionada">
+        </header>
+    </div>
 </body>
 </html>
