--- a/works.html
+++ b/works.html
@@ -27,55 +27,25 @@
         }
 
         .imagem-posicionada {
-    position: absolute;
-    top: 56px;
-    right: 0;
-    width: 22%;
-    height: auto;
-    margin-top: 66px;
-    border: 8px solid rgb(115, 115, 156);
-}
-
-@media (max-width: 768px) {
-    .imagem-posicionada {
-        width: 50%;
-        top: 30px;
-        right: 10px;
-    }
-}
-
-@media (max-width: 480px) {
-    .imagem-posicionada {
-        width: 80%;
-        top: 20px;
-        right: 5px;
-    }
-}
-
+            position: relative;
+            float: right;
+            width: 22%;
+            height: auto;
+            margin-top: 10px;
+            border: 8px solid rgb(115, 115, 156);
+        }
 
         @media (max-width: 768px) {
-            h1, h2 {
-                font-size: 18px;
-                margin: 20px 30px;
-                padding: 15px;
-            }
-
             .imagem-posicionada {
                 width: 50%;
-                margin: 30px auto;
+                margin-top: 10px;
             }
         }
 
         @media (max-width: 480px) {
-            h1, h2 {
-                font-size: 16px;
-                margin: 10px 20px;
-                padding: 10px;
-            }
-
             .imagem-posicionada {
                 width: 80%;
-                margin: 20px auto;
+                margin-top: 10px;
             }
         }
     </style>
