--- a/works.html
+++ b/works.html
@@ -1,63 +1,159 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-BR">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <style type="text/css">
+    <title>Meus Trabalhos</title>
+    <style>
         body {
-            color: white;
-            background-color: rgb(39, 35, 35);
-            font-family: Arial;
-            background-image: url('https://i.pinimg.com/736x/d9/28/9c/d9289c1a0efd9eda58197f41b49699d7.jpg');
-            background-size: cover;
-            background-repeat: no-repeat;
-            background-position: center;
+            font-family: 'Arial', sans-serif;
+            margin: 0;
+            padding: 0;
+            background-color: #000000;
+            color: #333;
         }
-
-        h1, h2 {
-            font-family: Helvetica;
-            font-size: 21px;
-            color: rgb(201, 168, 168);
-            margin: 20px 50px;
+        header {
+            background-color: #413c3c;
+            color: #ffffff;
+            padding: 1rem 0;
+            text-align: center;
+        }
+        .container {
+            width: 80%;
+            margin: auto;
+            overflow: hidden;
+        }
+        .project {
+            background: #7f7a7a;
+            margin: 1rem 0;
+            padding: 1rem;
+            border-radius: 10px;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+            transition: transform 0.3s;
+        }
+        .project:hover {
+            transform: scale(1.05);
+        }
+        .project img {
+            max-width: 100%;
+            border-radius: 10px;
+        }
+        .project h2 {
+            margin-top: 0;
+        }
+        .project p {
+            color: #000000;
+        }
+        section {
             padding: 20px;
+            margin: 20px 0;
             background-color: #1f1f1f;
             border-radius: 10px;
             box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
         }
-
-        .imagem-posicionada {
-            position: relative;
-            float: right;
-            width: 22%;
-            height: auto;
+        #contact {
+            background-color: #676060;
+            color: #ffffff;
+            padding: 20px;
+            border-radius: 10px;
+            text-align: center;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+        }
+        form {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+        }
+        form label {
             margin-top: 10px;
-            border: 8px solid rgb(115, 115, 156);
+            font-weight: bold;
         }
-
-        @media (max-width: 768px) {
-            .imagem-posicionada {
-                width: 22%;
-                margin-top: 10px;
-            }
+        form input {
+            padding: 10px;
+            margin-top: 5px;
+            width: 100%;
+            max-width: 400px;
+            border: 1px solid #ccc;
+            border-radius: 5px;
         }
-
-        @media (max-width: 480px) {
-            .imagem-posicionada {
-                width: 13%;
-                margin-top: 10px;
-            }
+        button {
+            padding: 10px 20px;
+            background-color: #ff4081;
+            color: #fff;
+            border: none;
+            border-radius: 5px;
+            cursor: pointer;
+            transition: background-color 0.3s ease;
+            margin-top: 20px;
+        }
+        button:hover {
+            background-color: #e03570;
         }
     </style>
 </head>
 <body>
-    <div>
-        <h1>PROJETOS</h1>
-        <h2>OUTROS TRABALHOS</h2>
-        <header>
-            <div class="center"></div>
-            <img src="./img/columbina2.jpeg" alt="Descrição da Imagem" class="imagem-posicionada">
-        </header>
+    <header>
+        <h1>Meus Trabalhos</h1>
+    </header>
+    <div class="container">
+        <div class="project" onclick="showProjectNotification('Projeto 1', 'Site de vendas.')">
+            <h2>Projeto 1</h2>
+            <img src="projeto1.jpg" alt="Imagem do Projeto 1">
+            <p>Site de vendas.</p>
+        </div>
+        <div class="project" onclick="showProjectNotification('Projeto 2', 'Sistema de carrinho de site.')">
+            <h2>Projeto 2</h2>
+            <img src="projeto2.jpg" alt="Imagem do Projeto 2">
+            <p>Sistema de carrinho de site.</p>
+        </div>
+        <div class="project" onclick="showProjectNotification('Projeto 3', 'Sistema de RH, onde será adicionado cada funcionário no sistema.')">
+            <h2>Projeto 3</h2>
+            <img src="projeto3.jpg" alt="Imagem do Projeto 3">
+            <p>Sistema de RH, onde será adicionado cada funcionário no sistema.</p>
+        </div>
     </div>
+    <div class="container">
+        <section id="contact">
+            <h3>Entre em contato</h3>
+            <form id="contactForm">
+                <label for="name">Nome:</label>
+                <input type="text" id="name" name="name">
+                <label for="email">Email:</label>
+                <input type="email" id="email" name="email">
+                <button type="submit">Enviar</button>
+            </form>                
+        </section>
+    </div>
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+    <script>
+        document.getElementById('contactForm').addEventListener('submit', function(event) {
+            event.preventDefault();
+            const email = document.getElementById('email').value;
+            if (email.includes('@')) {
+                Swal.fire({
+                    icon: 'success',
+                    title: 'Obrigado(a)!',
+                    text: 'Em breve entrarei em contato.',
+                    confirmButtonColor: '#ff4081'
+                });
+            } else {
+                Swal.fire({
+                    icon: 'error',
+                    title: 'Erro!',
+                    text: 'Complete as informações necessárias!',
+                    confirmButtonColor: '#ff4081'
+                });
+            }
+        });
+
+        function showProjectNotification(title, text) {
+            Swal.fire({
+                icon: 'info',
+                title: title,
+                text: text,
+                confirmButtonColor: '#ff4081'
+            });
+        }
+    </script>
 </body>
 </html>
