--- a/works.html
+++ b/works.html
@@ -89,6 +89,15 @@
         button:hover {
             background-color: #e03570;
         }
+        .watermark {
+            position: fixed;
+            bottom: 10px;
+            right: 10px;
+            opacity: 0.5;
+            font-size: 12px;
+            color: #fff;
+            margin: 20px;
+        }
     </style>
 </head>
 <body>
@@ -124,6 +133,7 @@
             </form>                
         </section>
     </div>
+    <div class="watermark">© 2024 beelhinha</div>
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <script>
         document.getElementById('contactForm').addEventListener('submit', function(event) {
